--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 	padding-left: 10%;
 }
 #map {
+	border-style: solid;
+    border-color: #555555;
 	padding-top: 5%;
 	width: 50%;
 	float: right;
@@ -65,6 +67,8 @@ input[type=range]::-moz-range-track {
   border: 0.2px solid #010101;
 }
 
+
+
 div.tooltip {
     color: #222;
     background: #fff;
@@ -74,4 +78,10 @@ div.tooltip {
     box-shadow: 0px 0px 2px 0px #a6a6a6;
     opacity: 0.9;
     position: absolute;
+}
+
+div.filteredPartyText {
+    padding: .5em;
+    padding-left: 50px;
+    opacity: 0.9;
 }
