--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
 body{
-	padding top: 
+	padding-top: 2%; 
+	padding-bottom: 2%;
 
 	padding-left: 10%;
 	padding-right: 10%;
 }
 
 #menu {
+	/* border-style: solid; */
+    /* border-color: #555555; */
 	width: 50%;
 	float: left;
 }
@@ -16,7 +19,6 @@ body{
 #map {
 	border-style: solid;
     border-color: #555555;
-	padding-top: 5%;
 	width: 50%;
 	float: right;
 }
