--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,18 @@ body{
 
 	padding-left: 10%;
 	padding-right: 10%;
+  height: 800px;
 }
 
 #menu {
 	/* border-style: solid; */
     /* border-color: #555555; */
 	width: 50%;
+  height: 100%;
 	float: left;
 }
 #menuitem {
+  width: 100%;
 	padding-top: 5%;
 	padding-left: 5%;
 }
@@ -20,7 +23,7 @@ body{
 	border-style: solid;
   border-color: #555555;
 	width: 50%;
-  height: 600px;
+  height: 100%;
 	float: right;
 }
 
