--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,20 @@ body{
 }
 
 #menu {
-	/* border-style: solid; */
-    /* border-color: #555555; */
 	width: 50%;
 	float: left;
 }
+
 #menuitem {
 	padding-top: 5%;
-	padding-left: 5%;
 }
+
+#subItem {
+	min-width: 100%;
+	padding-top: 0%;
+	padding-left: 10px;
+}
+
 #map {
 	border-style: solid;
   border-color: #555555;
@@ -28,15 +33,13 @@ body{
 	width: 40%;
 	float: left;
 }
+
 #right60 {
 	width: 60%;
 	padding-top: 30px;
 	/* float: right; */
 }
 
-#subItem {
-	padding-left: 10px;
-}
 
 #details {
   border-style: solid;
@@ -47,9 +50,16 @@ body{
   padding-top: 5%;
   padding-left: 5%;
 }
+
 #searchField {
-width: 75%;
-}
+	width: 75%;
+	max-width: 150px;
+} 
+
+#dropmenu {
+	width: 75%;
+	max-width: 200px;
+} 
 
 /* Styling of sliders. Only works for Firefox */
 input[type=range] {
@@ -76,7 +86,7 @@ input[type=range]::-ms-track {
 input[type=range]::-moz-range-thumb {
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
-  height: 32px;
+  height: 20px;
   width: 12px;
   border-radius: 3px;
   background: #ffffff;
