--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ body{
   border-style: solid;
   border-color: #555555;
   width: 80%;
+  text-align: center;
   min-height: 420px;
   margin-top: 5%;
   padding-top: 5%;
