--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,32 @@
 body{
-	padding-top: 2%; 
-	padding-bottom: 2%;
-
+	/* padding-top: 2%;  */
+	/* padding-bottom: 2%; */
 	padding-left: 10%;
 	padding-right: 10%;
-  height: 800px;
+	
+	height: 800px;
+}
+
+#topContainer {
+	margin : 0 auto;
+	height: 100%;
+	width: 100%;
+	max-width:1000px;
 }
 
 #menu {
 	width: 50%;
-  height: 100%;
+	height: 80%;
 	float: left;
+}
+
+#menuPanel {
+	height: 60%;
 }
 
 #menuitem {
   width: 100%;
-	padding-top: 5%;
+	padding-top: 2%;
 }
 
 #subItem {
@@ -26,52 +37,10 @@ body{
 
 #map {
 	border-style: solid;
-  border-color: #555555;
+	border-color: #555555;
 	width: 50%;
-  height: 100%;
+	height: 80%;
 	float: right;
-}
-
-#left40 {
-	width: 40%;
-	float: left;
-}
-
-#right60 {
-	width: 60%;
-	padding-top: 30px;
-	/* float: right; */
-}
-
-
-#details {
-  border-style: solid;
-  border-color: #555555;
-  width: 80%;
-  text-align: center;
-  min-height: 420px;
-  margin-top: 5%;
-  padding-top: 5%;
-  padding-left: 5%;
-}
-#detailsInfo {
-  min-height: 250px;
-  float: left;
-  width: 50%;
-}
-
-#detailsDonut {
-  min-height: 250px;
-  float: right;
-  width: 50%;
-}
-
-
-#detailsBelow {
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  height: 150px;
 }
 
 #searchField {
@@ -82,7 +51,59 @@ body{
 #dropmenu {
 	width: 75%;
 	max-width: 200px;
-} 
+}
+
+#details {
+  border-style: solid;
+  border-color: #555555;
+  width: 90%;
+  height: 40%;
+}
+
+#detailTextContent {
+	
+	border-style: solid;
+	border-color: #010101;
+	
+	float: left;
+	
+	width: 60%;
+	height: 80%;
+}
+
+#detailTextTitle {
+	
+	border-style: solid;
+	border-color: #000000;
+	
+	width: 100%;
+	height: 20%;
+	
+	text-align:center;
+}
+
+.detailTextField {
+	
+	margin: 5%;
+	
+	border-style: solid;
+	border-color: #000000;
+	
+	width: 90%;
+	height: 20%;
+}
+
+#detailDonutContent {
+	
+	border-style: solid;
+	border-color: #000000;
+	
+	float: right;
+	
+	width: 40%;
+	height: 80%;
+	max-height: 200px;
+}
 
 /* Styling of sliders. Only works for Firefox */
 input[type=range] {
