--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body{
-	/* padding-top: 2%;  */
+	padding-top: 5%; 
 	/* padding-bottom: 2%; */
-	padding-left: 10%;
-	padding-right: 10%;
+	padding-left: 5%;
+	padding-right: 5%;
 	
 	height: 800px;
 }
@@ -54,7 +54,7 @@ body{
 }
 
 #details {
-  border-style: solid;
+  border-style: double;
   border-color: #555555;
   width: 90%;
   height: 40%;
@@ -62,8 +62,8 @@ body{
 
 #detailTextContent {
 	
-	border-style: solid;
-	border-color: #010101;
+	/* border-style: solid; */
+	/* border-color: #010101; */
 	
 	float: left;
 	
@@ -73,8 +73,11 @@ body{
 
 #detailTextTitle {
 	
-	border-style: solid;
-	border-color: #000000;
+	/* border-style: solid; */
+	/* border-color: #000000; */
+	
+	background-color: black;
+	color: white;
 	
 	width: 100%;
 	height: 20%;
@@ -86,17 +89,16 @@ body{
 	
 	margin: 5%;
 	
-	border-style: solid;
-	border-color: #000000;
+	/* border-style: solid; */
+	/* border-color: #000000; */
 	
-	width: 90%;
+	width: 95%;
 	height: 20%;
 }
 
 #detailDonutContent {
-	
-	border-style: solid;
-	border-color: #000000;
+	/* border-style: solid; */
+	/* border-color: #000000; */
 	
 	float: right;
 	
